Bug 185148 - nsStorageStream::ReadSegments(...) loops forever if the writer fails. r-bzbarsky, sr-darin.